<resources>
    <string name="app_name">Restorant</string>
    <string name="ingrese_mozo">Ingresar Mozo</string>
    <string name="mesas_desocupadas">Mesas Desocupadas</string>
    <string name="mesa_padre">Mesa Seleccionada : </string>
    <string name="configuracion">CONFIGURACION INICIAL</string>
    <string name="vincular_mesas">VINCULAR </string>
    <string name="realizar_pedido">Pedido </string>
    <string name="cantidad_item">Cantidad: </string>
    <string name="precio_item">Precio: </string>
    <string name="salir">&#8592; Salir </string>
    <string name="pedir">&#10003; Perdir</string>
    <string name="cantidad_comensales">Cantidad de Comensales </string>
    <string name="cargando_espera">Cargando...</string>
    <string name="identificador_mozo">identificador</string>
    <string name="action_settings">Settings</string>
    <string name="origen">O:</string>
    <string name="destino">D:</string>
    <string name="a_bordo">AB:</string>
    <string name="desensos">&#x25BC;</string>
    <string name="linea">LÍNEA</string>
    <string name="bandera">BANDERA</string>
    <string name="servicio">SERVICIO</string>
    <string name="hora_minutos">HORA-MINUTOS</string>
    <string name="horario">HORARIO</string>
    <string name="validar_registrado">Debe estar registrado.</string>
    <string name="iniciar">INICIAR</string>
    <string name="asterisco">*</string>
    <string name="obligatorios">* Campos obligatorios.</string>
    <string name="imagen_perfil">imagen perfil</string>
    <string name="simi">SIMI:&#160;</string>
    <string name="IMEI">IMEI:&#160;</string>
    <string name="IMSI">IMSI:&#160;</string>
    <string name="Sdk">Android:&#160;</string>
    <string name="root">&#10003;</string>
    <string name="Apk">Versión:&#160;</string>
    <string name="codigoentidad">Entidad:&#160;</string>
    <string name="numeroequipo">Equipo:&#160;</string>
    <string name="codigoempresa">Empresa:&#160;</string>
    <string name="codigovehiculo">Vehículo:&#160;</string>
    <string name="codigochofer">Chofer:&#160;</string>
    <string name="codigolinea">Línea:&#160;</string>
    <string name="codigobandera">Bandera:&#160;</string>
    <string name="codigoservicio">Servicio:&#160;</string>
    <string name="ultnroboleto">Último número boleto:&#160;</string>
    <string name="ultnrorecaudacion">Último número recaudación:&#160;</string>
    <string name="versiontarifa">Versión tarifa:&#160;</string>
    <string name="datosmoviles">Datos&#160;</string>
    <string name="direccion">Dirección</string>
    <string name="localidad">Localidad</string>
    <string name="telefono">Teléfono</string>
    <string name="email_empresa">E-mail empresa:</string>
    <string name="dni_default">11111111</string>
    <string name="email_default">empresa@mail.com</string>
    <string name="email_personal">miemail@mail.com</string>
    <string name="ciudad_default">Calle nro (Ciudad)</string>
    <string name="person_info_null">Person information is null</string>
    <string name="nombre_falta">El nombre es un campo obligatorio</string>
    <string name="apellido_falta">El apellido es un campo obligatorio</string>
    <string name="nro_doc_falta">El número de documento es un campo obligatorio</string>
    <string name="email_invalido">E-mail de empresa no válido. Intente nuevamente</string>
    <string name="enviar">ENVIAR</string>
    <string name="inicio">Para comenzar por favor registrarse</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mje_registracion">Gracias por utilizar U+ Touch\npara continuar por favor registrarse</string>
    <string name="espere">Espere...</string>
    <string name="consulta_estado">ESTADO REGISTRO</string>
    <string name="consulta_estado_vertical">E\nS\nT\nA\nD\nO\n \nR\nE\nG\nI\nS\nT\nR\nO</string>
    <string name="validar_logueado">Debe estar logueado</string>
    <string name="validar_registracion">Debe estar registrado</string>
    <string name="validar_presionado">Complete el email de la empresa</string>
    <string name="validar_lin_ban_completos">Por favor completar la línea y/o bandera</string>
    <string name="validar_lin_hora_serv_ban_completos">Por favor completar la línea, horario, servicio y/o bandera</string>
    <string name="buscar">buscar</string>
    <string name="sincronizacion_exitosa">Sincronización exitosa</string>
    <string name="sincronizacion_error">Ha ocurrido un error al sincronizar. Por favor intente nuevamente</string>
    <string name="sincronizando">Sincronizando...</string>
    <string name="usuario">USUARIO</string>
    <string name="contrasenia">CLAVE</string>
    <string name="mje_login_incorrecto">Usuario o clave incorrectos</string>
    <string name="mje_login_correcto">Login correcto</string>
    <string name="mje_compo_vacio">Tiene que elegir un numero</string>
    <string name="mje_compo_usuario">Debe completar el campo Usuario</string>
    <string name="mje_ingrese_usuario">Ingrese su usuario</string>
    <string name="mje_ingrese_clave">Ingrese la clave</string>
    <string name="mje_desregistrar">Se desregistro correctamente</string>
    <string name="mje_deslogin_correcto">Deslogueo correcto</string>
    <string name="mje_encender_gps">Primero debe encender el GPS</string>
    <string name="mje_numero_incorrecto">Numero de localidad inexistente</string>
    <string name="mje_numero_incorrecto1">Numero inexistente o revise su conexion</string>
    <string name="mje_sincronizacion">Por favor sincronizar datos para comenzar</string>
    <string name="mje_error_vuelva_a_intentar">Ocurrió un error. Vuelva a intentar</string>
    <string name="mje_sin_vehiculo">Sin vehiculo asociado. Vuelva a sincronizar.</string>
    <string name="mje_error_Numero_no_encontrado">Numero de mensaje incorrecto</string>
    <string name="mje_enviado_con_exito">Mensaje enviado con éxito</string>
    <string name="alerta_enviado_con_exito">Alerta enviada con éxito</string>
    <string name="enviando_confirmacion">Enviando confirmación . . .</string>
    <string name="confirmacion_exitosa">Confirmación exitosa</string>
    <string name="menu_modo_noche">MODO NOCHE</string>
    <string name="menu_modo_dia">MODO DÍA</string>
    <string name="menu_luz_desvio">LUZ DESVIO</string>
    <string name="servicio_iniciado"> SERVICIO INICIADO </string>
    <string name="iniciar_servicio"> INICIAR SERVICIO </string>
    <string name="menu_login">LOGUEARSE</string>
    <string name="menu_iniciar_servicio">INICIAR SERVICIO</string>
    <string name="menu_finalizar_servicio">FINALIZAR SERVICIO</string>
    <string name="menu_media_vuelta">MEDIA VUELTA</string>
    <string name="configuracion_vista_msj_predeterminado">Vista de Mensaje por Listado/Numérico</string>
    <string name="menu_mensaje">MENSAJE</string>
    <string name="datos_registros">DATOS DE REGISTRO</string>
    <string name="menu_deslogueo">DESLOGUEARSE</string>
    <string name="menu_sincronizar_datos">SINCRONIZAR DATOS</string>
    <string name="menu_configuracion">CONFIGURACIÓN</string>
    <string name="menu_salir">SALIR</string>
    <string name="menu_mje_predeterminado">PREDETERMINADO</string>
    <string name="menu_mje_libre">LIBRE</string>
    <string name="menu_bandeja_entrada">BANDEJA DE ENTRADA</string>
    <string name="menu_bandeja_salida">BANDEJA DE SALIDA</string>
    <string name="estado_notificacion_UDP">Iniciando&#8230;</string>
    <string name="subtitulo_notificacion_UDP">En ejecución</string>
    <string name="configuracion_listado_msj_prede">Listado de mensajes</string>
    <string name="configuracion_ingreso_nro_mensaje">Número del mensaje</string>
    <string name="configuracion_vista_origen_destino">Vista de Localidad por Listado/Numérico</string>
    <string name="configuracion_listado">Listado</string>
    <string name="configuracion_ingreso_nro_localidad">Ingreso por número de localidad</string>
    <string name="mostrar_contrasenia">Mostrar contraseña</string>
    <string name="aviso">Aviso</string>
    <string name="desvio_default">--:--</string>
    <string name="sin_informar_recepcion">Sin informar recepción</string>
    <string name="sin_informar_confirmacion">Sin informar confirmación</string>
    <string name="main_button_discovery">Printer Discovery / Select</string>
    <string name="main_button_print">Print</string>
    <string name="discovery_label_interfacetype">Interface Type</string>
    <string name="discovery_radio_tcp">TCP(Wi-Fi)</string>
    <string name="discovery_radio_blueooth">Bluetooth</string>
    <string name="discovery_radio_usb">USB</string>
    <string name="discovery_label_printerlist">Printer List</string>
    <string name="printername_t88v">TM-T88V</string>
    <string name="printername_t70">TM-T70</string>
    <string name="printername_u220">TM-U220</string>
    <string name="printername_u330">TM-U330</string>
    <string name="printername_p60">TM-P60</string>
    <string name="printername_p60ii">TM-P60II</string>
    <string name="printername_t20">TM-T20</string>
    <string name="printername_t82">TM-T82</string>
    <string name="printername_t81ii">TM-T81II</string>
    <string name="printername_t82ii">TM-T82II</string>
    <string name="printername_t83ii">TM-T83II</string>
    <string name="printername_t70ii">TM-T70II</string>
    <string name="printername_t90ii">TM-T90II</string>
    <string name="printername_t20ii">TM-T20II</string>
    <string name="printername_p20">TM-P20</string>
    <string name="printername_p80">TM-P80</string>
    <string name="printername_m10">TM-m10</string>
    <string name="printername_m30">TM-m30</string>
    <string name="methoderr_errcode">Error Code</string>
    <string name="methoderr_method">Method</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_ex_param">Programming error: Parameter error has occurred.\n</string>
    <string name="handlingmsg_ex_open">Please check the connection of the printer and the mobile terminal.\nFailed to open communication port.\n</string>
    <string name="handlingmsg_ex_connect">Please reconnect the printer and the mobile terminal.\nFailed to communicate with the printer.\n</string>
</resources>