<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="550dp"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_tc_texto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/cantidad_comensales"
                android:textColor="@color/black"
                
                android:textSize="40dp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/keyboard_texto_chico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:lines="1"
                android:maxLength="3"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <android.inputmethodservice.KeyboardView
                android:id="@+id/keyboardviewchico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:keyBackground="@drawable/keyboard_selected"
                android:keyTextColor="@color/white"
                android:keyTextSize="40sp"
                android:visibility="visible" />
            <LinearLayout 
                android:layout_height="match_parent"
                android:layout_width="match_parent">
                
                
                 <Button 
                    android:id="@+id/btn_tc_salir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                     android:background="@color/color_btn_menu"
                    android:gravity="center"
                    android:text="@string/salir"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" 
                    />
                 <Button 
                    android:id="@+id/btn_tc_aceptar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@color/colorEnviar"
                    android:gravity="center"
                    android:text="@string/aceptar"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"  
                    />
                
                
                
                
                
            </LinearLayout>
            
            
        </LinearLayout>
    </FrameLayout>

</LinearLayout>