<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="horizontal"
    android:weightSum="1" >

    <FrameLayout
        android:id="@+id/fl_empeza_perdido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="5dp" >

                <ImageButton
                    android:id="@+id/imgbtn_ep_salir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@color/transparent"
                    android:paddingLeft="@dimen/activity_vertical_margin_botones"
                    android:src="@drawable/ic_arrow_left_thick_black_48dp"
                    android:textColor="@color/black"
                    android:textSize="40sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.9"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal"
                    android:paddingBottom="30dp" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:gravity="left"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_ep_mesas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="9.0dip"
                            android:gravity="top"
                            android:text="@string/mesas_desocupadas"
                            android:textColor="@color/white"
                            android:textSize="40sp"
                            android:textStyle="bold|italic" />

                        <ListView
                            android:id="@+id/lv_ep_mesas_desocupadas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawSelectorOnTop="false"
                            android:paddingLeft="9.0dip"
                            android:paddingRight="9.0dip"
                             >
                        </ListView>

                        <LinearLayout
                            android:id="@+id/ll_ep_mostrar_padre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:orientation="horizontal"
                            android:visibility="gone" >

                            <TextView
                                android:id="@+id/tv_ep_mesa_padre_seccionada"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="9.0dip"
                                android:gravity="center|end"
                                android:paddingRight="9.0dip"
                                android:text="@string/mesa_padre"
                                android:textColor="@color/white"
                                android:textSize="30sp"
                                android:textStyle="bold|italic" />

                            <ImageButton
                                android:id="@+id/imgbtn_ep_borrar_padre"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/transparent"
                                android:paddingLeft="@dimen/activity_vertical_margin_botones"
                                android:src="@drawable/ic_delete_forever_white_48dp"
                                android:textColor="@color/black"
                                android:textSize="40sp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btn_ep_vincular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/botones_grey"
                            android:contentDescription=""
                            android:text="@string/vincular_mesas"
                            android:textColor="@color/color_texto"
                            android:textSize="35sp"
                            android:textStyle="bold|italic" />
                        
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/cardList"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:width="80dp"
                            android:paddingLeft="9.0dip"
                            android:paddingRight="9.0dip"
                            android:scrollbars="vertical"
                            />
                        
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_ep_cantidad_comensales"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:text="@string/cantidad_comensales"
                            android:textColor="@color/color_texto"
                            android:textSize="40dp"
                            android:textStyle="bold|italic" />

                        <EditText
                            android:id="@+id/keyboard_texto_chico"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@color/white"
                            android:lines="1"
                            android:maxLength="3"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="40sp"
                            android:textStyle="bold" />

                        <android.inputmethodservice.KeyboardView
                            android:id="@+id/keyboardviewchico"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/transparent"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:keyBackground="@drawable/keyboard_selected"
                            android:keyTextColor="@color/white"
                            android:keyTextSize="40sp"
                            android:visibility="visible" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/config_login_btn_volver"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="220dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/fab_background"
            android:contentDescription=""
            android:src="@drawable/ic_volver"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/imgbtn_ep_aceptar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="56dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/fab_background_ingresar"
            android:contentDescription=""
            android:src="@drawable/ic_ingresar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/main_img_logo"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_logo" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_cargando"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
          >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/tv_textoCargando"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/cargando_espera"
                android:textColor="@color/white"
                android:textSize="60dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>